--- a/client/views/ui_tetris.ui
+++ b/client/views/ui_tetris.ui
@@ -1901,14 +1901,35 @@ border-radius: 7px;</string>
      <widget class="QTabWidget" name="ranks">
       <property name="geometry">
        <rect>
-        <x>4</x>
-        <y>49</y>
-        <width>791</width>
-        <height>501</height>
+        <x>24</x>
+        <y>39</y>
+        <width>751</width>
+        <height>511</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QTabWidget::pane {
+  border: 1px solid lightgray;
+  top:-1px; 
+  background: rgb(245, 245, 245);
+	
+} 
+
+QTabBar::tab {
+	background: rgb(245, 245, 245);
+  border: 1px solid lightgray; 
+  padding: 15px;
+font: 10pt &quot;Microsoft JhengHei&quot;;
+} 
+
+QTabBar::tab:selected { 
+   
+background: rgb(180, 217, 217);
+  margin-bottom: -1px; 
+}</string>
+      </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab_single_rank">
        <attribute name="title">
@@ -1917,19 +1938,24 @@ border-radius: 7px;</string>
        <widget class="QLabel" name="label_single_rank">
         <property name="geometry">
          <rect>
-          <x>200</x>
-          <y>20</y>
-          <width>341</width>
-          <height>81</height>
+          <x>220</x>
+          <y>10</y>
+          <width>311</width>
+          <height>61</height>
          </rect>
         </property>
         <property name="font">
          <font>
-          <family>Consolas</family>
-          <pointsize>30</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
+          <family>Microsoft JhengHei</family>
+          <pointsize>25</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
          </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(255, 255, 255);
+font: 25pt &quot;Microsoft JhengHei&quot;;</string>
         </property>
         <property name="text">
          <string>個人排行榜</string>
@@ -1940,25 +1966,35 @@ border-radius: 7px;</string>
        </widget>
       </widget>
       <widget class="QWidget" name="tab_connection_rank">
+       <property name="font">
+        <font>
+         <family>Microsoft JhengHei</family>
+        </font>
+       </property>
        <attribute name="title">
         <string>對戰</string>
        </attribute>
        <widget class="QLabel" name="label_connection_rank">
         <property name="geometry">
          <rect>
-          <x>210</x>
-          <y>20</y>
-          <width>341</width>
-          <height>81</height>
+          <x>220</x>
+          <y>10</y>
+          <width>311</width>
+          <height>61</height>
          </rect>
         </property>
         <property name="font">
          <font>
-          <family>Consolas</family>
-          <pointsize>30</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
+          <family>Microsoft JhengHei</family>
+          <pointsize>25</pointsize>
+          <weight>50</weight>
+          <italic>false</italic>
+          <bold>false</bold>
          </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(255, 255, 255);
+font: 25pt &quot;Microsoft JhengHei&quot;;</string>
         </property>
         <property name="text">
          <string>對戰排行榜</string>
@@ -1985,7 +2021,17 @@ border-radius: 7px;</string>
        </font>
       </property>
       <property name="text">
-       <string>M</string>
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../static/home.png</normaloff>../static/home.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>30</width>
+        <height>30</height>
+       </size>
       </property>
      </widget>
     </widget>
@@ -2001,12 +2047,16 @@ border-radius: 7px;</string>
       </property>
       <property name="font">
        <font>
-        <family>Consolas</family>
-        <pointsize>40</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-        <underline>false</underline>
+        <family>Microsoft JhengHei</family>
+        <pointsize>25</pointsize>
+        <weight>50</weight>
+        <italic>false</italic>
+        <bold>false</bold>
        </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 25pt &quot;Microsoft JhengHei&quot;;</string>
       </property>
       <property name="text">
        <string>遊戲規則</string>
@@ -2029,6 +2079,9 @@ border-radius: 7px;</string>
         <family>Microsoft JhengHei</family>
         <pointsize>20</pointsize>
        </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string>&lt;</string>
